--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   custom_lint:
   riverpod_lint: ^2.6.5
   flutter_lints: ^5.0.0
+  shared_preferences: ^2.2.0
 
 flutter:
   uses-material-design: true
