--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,10 @@ dependencies:
   google_fonts: ^6.2.1
 
 dev_dependencies:
+
   flutter_test:
+    sdk: flutter
+  flutter_driver:
     sdk: flutter
   riverpod_generator: ^2.6.5
   build_runner: #Versión más reciente
@@ -27,6 +30,7 @@ dev_dependencies:
   riverpod_lint: ^2.6.5
   flutter_lints: ^5.0.0 
   shared_preferences: ^2.2.0
+  test: ^1.25.15
 
 flutter:
   uses-material-design: true
