--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,14 @@ dependencies:
   flutter_riverpod: ^2.6.1
   http: ^1.3.0
   riverpod_annotation: ^2.6.1
+  sqflite_common_ffi: ^2.3.0
   sqflite: ^2.3.0
   path_provider: ^2.1.1
   flutter_native_splash: ^2.3.3
   google_fonts: ^6.2.1
 
 dev_dependencies:
-
+  mockito: ^5.4.2
   flutter_test:
     sdk: flutter
   flutter_driver:
